--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,10 @@ services:
       retries: 5
 
   redpanda:
+    container_name: redpanda-0
     image: docker.redpanda.com/redpandadata/redpanda:v25.3.1
+    volumes:
+      - redpanda_data:/var/lib/redpanda/data
     command:
       - redpanda
       - start
@@ -46,8 +49,6 @@ services:
       - 18082:18082
       - 19092:19092
       - 19644:9644
-    volumes:
-      - redpanda_data:/var/lib/redpanda/data
     healthcheck:
       test: [ "CMD-SHELL", "rpk cluster health | grep -E 'Healthy|OK'" ]
       interval: 10s
@@ -55,6 +56,7 @@ services:
       retries: 5
 
   redpanda-console:
+    container_name: redpanda-console
     image: docker.redpanda.com/redpandadata/console:v3.3.2
     entrypoint: /bin/sh
     command: -c 'echo "$$CONSOLE_CONFIG_FILE" > /tmp/config.yml; /app/console'
