--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "libs/core/src/domain/**/*.ts",
+      "apps/**/*.service.ts",
+      "!**/*.spec.ts"
     ],
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
@@ -86,6 +88,14 @@
     },
     "transformIgnorePatterns": [
       "node_modules/(?!uuid)"
-    ]
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
   }
 }
