Required scheduledAt and idempotencyKey

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
       ],
       "@app/core/*": [
         "libs/core/src/*"
+      ],
+      "@app/prisma/client": [
+        "generated/prisma"
       ]
     }
   }
