--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@prisma/client": "^7.0.1",
     "@types/uuid": "^10.0.0",
     "kafkajs": "^2.2.4",
+    "nestjs-pino": "^4.5.0",
     "pg": "^8.16.3",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "uuid": "^13.0.0",
