--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.0.1",
     "@types/uuid": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "kafkajs": "^2.2.4",
     "nestjs-pino": "^4.5.0",
     "pg": "^8.16.3",
@@ -35,8 +37,7 @@
     "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "uuid": "^13.0.0",
-    "zod": "^4.1.13"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
