--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "seed": "npx ts-node -r tsconfig-paths/register scripts/seed.ts",
-    "test:workflow": "npx ts-node -r tsconfig-paths/register scripts/test-workflow.ts"
+    "test:cov": "jest --coverage"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
